@@ -1,9 +1,14 @@
 package net.okocraft.boxtradestick;
 
+import com.github.siroshun09.messages.minimessage.source.MiniMessageSource;
 import io.papermc.paper.event.player.PlayerPurchaseEvent;
 import io.papermc.paper.event.player.PlayerTradeEvent;
 import java.util.ArrayList;
 import java.util.List;
+import it.unimi.dsi.fastutil.objects.Object2IntArrayMap;
+import net.kyori.adventure.text.Component;
+import net.okocraft.box.api.BoxAPI;
+import net.okocraft.box.api.model.item.BoxItem;
 import net.okocraft.box.api.util.InventoryUtil;
 import org.bukkit.Sound;
 import org.bukkit.entity.AbstractVillager;
@@ -19,7 +24,7 @@ public final class TradeProcessor {
         return villager.getRecipeCount() < TradeStickData.MAXIMUM_INDEX;
     }
 
-    public static int processSelectedOffersForMaxUses(@NotNull Player trader, @NotNull AbstractVillager villager) {
+    public static int processSelectedOffersForMaxUses(@NotNull Player trader, @NotNull MiniMessageSource messageSource, @NotNull AbstractVillager villager) {
         int[] recipeIndices = TradeStickData.loadFrom(villager).getSelectedIndices(trader.getUniqueId());
 
         if (recipeIndices.length == 0) {
@@ -38,31 +43,27 @@ public final class TradeProcessor {
 
         if (results.isEmpty()) {
             trader.playSound(villager, Sound.ENTITY_VILLAGER_NO, 1, 1);
-            trader.sendActionBar(Translatables.OUT_OF_STOCK);
+            trader.sendActionBar(Languages.RECIPE_OUT_OF_STOCK.create(messageSource));
             return 0;
         }
 
-        trader.playSound(villager, Sound.ENTITY_VILLAGER_TRADE, 1, 1);
+        Component message;
 
         if (results.size() == 1) {
-            TradeResult result = results.get(0);
-            trader.sendActionBar(Translatables.RESULT_TIMES.apply(result.count, result.recipe.getResult()));
+            TradeResult result = results.getFirst();
+            message = Languages.RESULT_TIMES.apply(result.count, result.recipe.getResult(), result.recipe.getResult().getAmount() * result.count).create(messageSource);
         } else {
-            trader.sendActionBar(Translatables.MULTIPLE_RESULT_TIMES.apply(
-                    results.stream().mapToInt(TradeResult::count).sum(),
-                    results.size()
-            ));
+            message = Languages.MULTIPLE_RESULT_TIMES.apply(results.stream().mapToInt(TradeResult::count).sum(), results.size()).create(messageSource);
         }
+
+        trader.playSound(villager, Sound.ENTITY_VILLAGER_TRADE, 1, 1);
+        trader.sendActionBar(message);
 
         return results.size();
     }
 
     public static @Nullable TradeResult tradeForMaxUses(@NotNull Player trader, @NotNull AbstractVillager villager, int recipeIndex) {
-        if (!BoxUtil.checkPlayerCondition(trader, "boxtradestick.trade")) {
-            return null;
-        }
-
-        if (recipeIndex < 0 || recipeIndex >= villager.getRecipeCount()) {
+        if (!canTrade(trader, villager, recipeIndex)) {
             return null;
         }
 
@@ -79,18 +80,18 @@ public final class TradeProcessor {
     }
 
     public static boolean trade(@NotNull Player trader, @NotNull AbstractVillager villager, int recipeIndex) {
-        if (!BoxUtil.checkPlayerCondition(trader, "boxtradestick.trade")) {
+        if (canTrade(trader, villager, recipeIndex)) {
+            return trade0(trader, villager, recipeIndex);
+        } else {
             return false;
         }
-
-        if (recipeIndex < 0 || recipeIndex >= villager.getRecipeCount()) {
-            return false;
-        }
-
-        return trade0(trader, villager, recipeIndex);
     }
 
     private static boolean trade0(@NotNull Player trader, @NotNull AbstractVillager villager, int recipeIndex) {
+        if (!BoxAPI.api().getBoxPlayerMap().isLoaded(trader)) {
+            return false;
+        }
+
         var merchantOffer = villager.getRecipe(recipeIndex);
 
         if (merchantOffer.getUses() >= merchantOffer.getMaxUses()) {
@@ -104,31 +105,59 @@ public final class TradeProcessor {
         }
 
         merchantOffer = event.getTrade();
-        List<ItemStack> ingredients = new ArrayList<>(merchantOffer.getIngredients());
-        if (ingredients.size() >= 1) {
-            ingredients.set(0, merchantOffer.getAdjustedIngredient1());
-        }
-        var cause = new BoxUtil.Trade(trader, merchantOffer);
-        if (!BoxUtil.tryConsumingStockMulti(trader, ingredients, cause)) {
+
+        var ingredients = merchantOffer.getIngredients();
+
+        if (ingredients.isEmpty()) {
             return false;
         }
 
-        var resultBukkit = merchantOffer.getResult();
+        var ingredientMap = new Object2IntArrayMap<BoxItem>(ingredients.size());
 
-        var result = BoxUtil.getBoxItem(resultBukkit);
-        if (result.isEmpty()) {
-            int remaining = InventoryUtil.putItems(trader.getInventory(), resultBukkit, resultBukkit.getAmount());
+        for (int i = 0, size = ingredients.size(); i < size; i++) {
+            var ingredient = ingredients.get(i);
 
-            if (0 < remaining) {
-                drop(trader, resultBukkit.asQuantity(remaining));
+            if (ingredient.getType().isAir()) {
+                continue;
             }
-        } else {
-            // stock is definitely present.
-            BoxUtil.getStock(trader).ifPresent(stock -> stock.increase(result.get(), resultBukkit.getAmount(), cause));
+
+            var boxItem = BoxAPI.api().getItemManager().getBoxItem(ingredient);
+
+            if (boxItem.isEmpty()) {
+                return false;
+            } else if (i == 0) {
+                var adjusted = merchantOffer.getAdjustedIngredient1();
+                if (adjusted != null) {
+                    ingredientMap.put(boxItem.get(), adjusted.getAmount());
+                } else {
+                    return false;
+                }
+            } else {
+                ingredientMap.put(boxItem.get(), ingredient.getAmount());
+            }
         }
 
-        NMSUtil.processTrade(trader, villager, merchantOffer, event);
-        return true;
+        var stockHolder = BoxAPI.api().getBoxPlayerMap().get(trader).getCurrentStockHolder();
+        var cause = new TradeCause(trader, new MerchantRecipe(merchantOffer));
+
+        if (stockHolder.decreaseIfPossible(ingredientMap, cause)) {
+            var resultBukkit = merchantOffer.getResult();
+            var result = BoxAPI.api().getItemManager().getBoxItem(resultBukkit);
+            if (result.isEmpty()) {
+                int remaining = InventoryUtil.putItems(trader.getInventory(), resultBukkit, resultBukkit.getAmount());
+
+                if (0 < remaining) {
+                    drop(trader, resultBukkit.asQuantity(remaining));
+                }
+            } else {
+                stockHolder.increase(result.get(), resultBukkit.getAmount(), cause);
+            }
+
+            NMSUtil.processTrade(trader, villager, merchantOffer, event);
+            return true;
+        } else {
+            return false;
+        }
     }
 
     private static void drop(Player player, ItemStack item) {
@@ -136,6 +165,13 @@ public final class TradeProcessor {
         player.getInventory().setItemInMainHand(item);
         player.dropItem(true);
         player.getInventory().setItemInMainHand(hand);
+    }
+
+    private static boolean canTrade(Player player, @NotNull AbstractVillager villager, int recipeIndex) {
+        return BoxAPI.api().canUseBox(player) &&
+               player.hasPermission("boxtradestick.trade") &&
+               0 <= recipeIndex &&
+               recipeIndex < villager.getRecipeCount();
     }
 
     private TradeProcessor() {
